[gd_scene load_steps=3 format=2]

[ext_resource path="res://FontFredoka.tres" type="DynamicFont" id=1]
[ext_resource path="res://heroes/abilities/AbilityLabel.gd" type="Script" id=2]

[node name="MarginAbilityLabel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityLabel" type="Label" parent="."]
margin_left = 6.0
margin_top = 12.0
margin_right = 42.0
margin_bottom = 27.0
mouse_filter = 1
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ability"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_MarginAbilityLabel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MarginAbilityLabel_mouse_exited"]
